@@ -6,7 +6,7 @@ man_MANS   = gnome-mud.1
 EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog INSTALL Makefile.in NEWS \
 			 README ROADMAP configure configure.in ABOUT-NLS \
 			 install-sh mkinstalldirs gnome-mud.desktop \
-			 gnome-mud.lsm acconfig.h \
+			 gnome-mud.lsm acconfig.h PLUGIN.API \
 			 $(man_MANS)
 Applicationsdir = $(datadir)/gnome/apps/Games
 Applications_DATA = gnome-mud.desktop
