@@ -1,3 +1,14 @@
+Fri Nov 23 15:23:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>
+
+	* Makefile.am: PLUGIN.API should be distributed in "HEAD" CVS
+	aswell as BRANCH_0_8.
+
+	* ROADMAP: Added double entry for easier NEWS catchup :)
+
+	* src/profiles.c (connections_button_press_cb): Added function
+	to trap doubleclick events.
+	(window_profiles): Added signal for "button_press_event"
+
 Mon Nov 12 17:21:59 CET 2001  Robin Ericsson  <lobbin@localhost.nu>
 
 	* configure.in: Stepped version to 0.8.99.
